# backend-coding-challenge-django

./: Makefile  pyproject.toml  requirements.txt
app/: .pre-commit-config.yaml  pytest.ini  setup.cfg
app/app/: settings.py  urls.py
app/notes/: admin.py  models.py  serializers.py  test_api.py  test_models.py  test_notes.py  urls.py  views.py
app/notes/migrations/: 0001_initial.py  0002_rename_notes_note_rename_tags_tag.py  0003_remove_tag_notes_note_tags.py  0004_note_owner.py
app/notes/tests/: test_api.py  test_api_with_parameters.py  test_models.py
app/tests/: test_smoketest.py
