[tool.poetry]
name = "backend-coding-challenge-django"
version = "0.1.0"
description = ""
authors = ["daniel rios <misterrios@gmail.com>"]
readme = "README.md"
packages = [{include = "backend_coding_challenge_django"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.0"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
pdbpp = "^0.10.3"
django-debug-toolbar = "^3.8.1"
django-extensions = "^3.2.1"
black = "^22.12.0"
isort = "^5.11.4"
pytest-django = "^4.5.2"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
